# multistage-dockerfile-demo

./: .editorconfig  Dockerfile  README.md  docker-compose.yml  pyproject.toml
