[tool.poetry]
name = "hello-world"
version = "0.1.0"
description = ""
authors = ["Amy Pircher <akpircher@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipython = {path = "third_party/ipython-7.25.0-py3-none-any.whl"}

[tool.poetry.dev-dependencies]
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
